--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,7 @@
                     <descriptorRefs>
                         <descriptorRef>jar-with-dependencies</descriptorRef>
                     </descriptorRefs>
+                    <appendAssemblyId>false</appendAssemblyId>
                     <finalName>poe</finalName>
                 </configuration>
             </plugin>
